# acoustid-fingerprinter

./: .bzrignore  CHANGES.txt  CMakeLists.txt  README.md  README.txt  acoustid-fingerprinter.desktop  analyzefiletask.cpp  analyzefiletask.h  checkabledirmodel.cpp  checkabledirmodel.h  constants.h  decoder.cpp  decoder.h  fingerprintcalculator.cpp  fingerprintcalculator.h  fingerprinter.cpp  fingerprinter.h  fingerprinter.qrc  fingerprinter.rc  gzip.cpp  loadfilelisttask.cpp  loadfilelisttask.h  main.cpp  mainwindow.cpp  mainwindow.h  progressdialog.cpp  progressdialog.h  tagreader.cpp  tagreader.h  updatelogfiletask.cpp  updatelogfiletask.h  utils.h
ffmpeg/: audioconvert.h
images/: acoustid-fp.icns
